--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2532,107 +2532,107 @@ stories:
   domain: http://www.bdtonline.com/
   link: https://www.bdtonline.com/news/armored-truck-s-cash-rains-on-atlanta-interstate/article_d0bd37ed-9ff6-5a8a-bdf9-506257265f87.html
 images:
-- name: containership-containership-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smooth-ride.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
-- name: old-church-oldchurch-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-monet-one.jpg
-- name: downtown-los-angeles-downtown-la-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-free-woman.JPG
-- name: bluelake-colorful-blocks-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-00-38-67.jpg
-- name: old-church-oldchurch-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-electricity.jpg
-- name: oldcabin-store-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-yellow-collage.jpg
-- name: gypsymosaic-gypsy-eyes-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-yellow-collage.jpg
-- name: store-on-corner-oldcabin-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purp-paper.jpg
-- name: oldhousecars-house-old-cars-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-propaganda-leaflets.jpg
-- name: gypsy-wagon-gypsywagon-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dark-rain.jpg
-- name: downtown-los-angeles-downtown-la-crabapple.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-crabapple.JPG
-- name: store-on-corner-oldcabin-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-sunday.jpg
-- name: dc-statue-dcstatue-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-deep-connections.jpg
-- name: fence-fence-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-gan-vogh.jpg
-- name: abandonedbuildings_sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_sunday.jpg
-- name: dragon-desert-desert-dragon-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-nazi-poster.jpg
-- name: aws-s3-stories-flower-barbed-wire-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-flower-barbed-wire-clean-view.jpg
-- name: mosaic-face-mosaic-face-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-smoking-cigarette.jpg
-- name: cargo-ship-cargo-ship-on-sea-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-purple-storm.jpg
-- name: birdhouse-birdhouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-space-pizza.jpg
-- name: flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
-- name: window-window-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-rainbow-festival.jpg
-- name: sand-hand-sand-hand-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-rainbow-festival.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
-- name: dc-statue-dcstatue-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crafty-painting.jpg
-- name: catacombs-catacombs-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-wols.jpg
-- name: liberty-back-statue-liberty-back-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-neo-instinct.jpg
-- name: old-gas-pumps-oldgaspumps-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-pablo-blue.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-- name: eduardo-eduardo.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo.jpg
-- name: san-francisco-street-view-san-francisco-street-view-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-atari-missle.jpg
-- name: liberty-back-statue-liberty-back-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-cinnamon-rolls.jpg
-- name: cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
-- name: legal-statue-legalstatue-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-alien-goggles.jpg
-- name: amusement-park-amusement-park-2-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-neo-instinct.jpg
-- name: old-granary-field-granaryfield-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crunch-paper.jpg
-- name: border-fence-border-fence-on-hill-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-umberto-bocc.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-kandinsky-bv.jpg
-- name: window-window-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-circuit.jpg
-- name: store-on-corner-store-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-asteroids.jpg
-- name: nyc-flag-nycflag-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-collage.jpg
-- name: abe-lincoln-one-purp-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-00-00.jpg
-- name: bluelake-blue-granite-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-granite-file-00-00-38-67.jpg
-- name: white-house-lawn-white-house-window-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-constitution.jpg
-- name: art-museum-art-museum-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-deep-connections.jpg
-- name: locked-up-steam-lock-up-steam-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-internet-numbers.jpg
-- name: downtown-los-angeles-downtown-la-green-zuma.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-green-zuma.JPG
-- name: lincoln-memorial-lincolnmemorial-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-circuit.jpg
-- name: old-school-house-old-schoolhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-three.jpg
-- name: stories-new-27-93-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dry-skin.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
+- name: downtown-fredericksburg-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-marcel-duchamp.JPG
+- name: oldbarn-oldbarn-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-granite.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+- name: old-school-house-old-schoolhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-sunday.jpg
+- name: copper-circuit-DSC_0062.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0062.jpg
+- name: oldhousecars-house-old-cars-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-neo-instinct.jpg
+- name: razorwire-DSC-0080-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-yellow-paper.jpg
+- name: yosemite-yosemite-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-sand-paper.jpg
+- name: ellis-island-ellisisland-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-aqua.jpg
+- name: server-cloud-server-racks-door-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sunday.jpg
+- name: old-church-oldchurch-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dali-three.jpg
+- name: fence-fence-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-spagetti-accident.jpg
+- name: old-door-lock-old-door-lock-2-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alberto-giacometti.jpg
+- name: rockingchair-face-2-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crabapple.jpg
+- name: carry-load-carryload-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-colorful-dream.jpg
+- name: mosaic-face-mosaic-face-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-cinnamon-rolls.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
+- name: berlinwall2-berlinwall-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-diego-rivera1.jpg
+- name: machine-road-machine-road-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crafty-painting.jpg
+- name: stories-face-2-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-face-2-blue-circuit.jpg
+- name: berlinwall2-berlinwall-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-umberto-bocc.jpg
+- name: adam-smith-adam-smith-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-bright-sand.jpg
+- name: abandonedbuildings_pablo_blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_pablo_blue.jpg
+- name: blossombar-purple-storm-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-50-62.jpg
+- name: oldroad-old-road-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-graham-sutherland.jpg
+- name: dragon-desert-desert-dragon-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-alien-goggles.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-3.jpg
+- name: oldhousecars-house-old-cars-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-purple-pond.jpg
+- name: server-cloud-server-racks-clouds-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-deep-connections.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-aqua.jpg
+- name: beach-clouds-lifeguard-beachclouds-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-aqua.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+- name: old-granary-field-granaryfield-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purp-paper.jpg
+- name: school-clouds-church-clouds-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-spagetti-accident.jpg
+- name: lincoln-memorial-lincolnmemorial-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-paper.jpg
+- name: border-fence-border-fence-on-hill-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smooth-ride.jpg
+- name: oldhousecars-house-old-cars-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-marcel-duchamp.jpg
+- name: windowmountain-window-mountain-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purple-storm.jpg
+- name: legal-statue-legalstatue-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-plentiful.jpg
+- name: catacombs-catacombs-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crunch-paper.jpg
+- name: carry-load-carryload-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-gan-vogh.jpg
+- name: beach-rocks-beach-rocks-currents-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-wols.jpg
+- name: white-house-lawn-white-house-lawn-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crabapple.jpg
+- name: dc-statue-dcstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-light-dali.jpg
+- name: miamibeach-miamibeach-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-cinnamon-rolls.jpg
+- name: oldcabin-oldcabin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-monet-one.jpg
+- name: eduardo-eduardo-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-far-away.jpg
 ---
 Grievance Hearing To Proceed.&nbsp;Chickasha Public School Announces Meet The Teacher, Schedule Pickup Dates.&nbsp;Trump Defends Acosta But Will Look Into Epstein Plea Deal.&nbsp;Chicago Police Investigators Confirm Alligator In Lagoon.&nbsp;Letters To The Editor.&nbsp;Man In Critical Condition After Altercation.&nbsp;Several Lodged In Big Sandy Regional Detention Center.&nbsp;Have You Visited The Freeman Farmer's Market.&nbsp;
